# bikecleats

./: Cargo.toml  README.md
.github/workflows/: ci.yml
bikecleats_judge/: Cargo.toml
bikecleats_judge/src/: lib.rs
bikecleats_testsuite/: Cargo.toml
bikecleats_testsuite/src/: lib.rs
bikecleats_web/: Cargo.toml
bikecleats_web/src/: args.rs  cookies.rs  credentials.rs  download.rs  lib.rs  outcomes.rs  platforms.rs  request.rs  session.rs  shell.rs
bikecleats_web/tests/: login.rs
bikecleats_web/tests/snapshots/: login__atcoder_messages.snap  login__atcoder_outcome.snap
bikecleats_web_test_utils/: Cargo.toml
bikecleats_web_test_utils/src/: lib.rs
src/: main.rs
