[package]
name = "bikecleats_testsuite"
version = "0.0.0"
edition = "2018"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Tools for competitive programming."
repository = "https://github.com/qryxip/bikecleats"
documentation = "https://docs.rs/bikecleats_testsuite"
keywords = []
categories = ["command-line-utilities"]
publish = false

[dependencies]
anyhow = "1.0.40"
camino = { version = "1.0.4", features = ["serde1"] }
humantime-serde = "1.0.1"
ignore = "0.4.17"
itertools = "0.10.0"
maplit = "1.0.2"
serde = { version = "1.0.125", features = ["derive"] }
serde_yaml = "0.8.17"
url = { version = "2.2.1", features = ["serde"] }
yaml-rust = "0.4.5"

[dev-dependencies]
difference = "2.0.0"
pretty_assertions = "0.7.1"
